<resources>
    <string name="app_name">Task_4</string>

    <string name="txt_et_put_id">Put ID: </string>
    <string name="txt_main_put_name">Put name: </string>
    <string name="txt_main_put_surname">Put surname:</string>
    <string name="txt_main_put_phone_number">Put phone number: </string>
    <string name="txt_main_put_mail">Put mail: </string>
    <string name="txt_main_put_skype">Put skype: </string>

    <string name="txt_btn_main_save">SAVE</string>

    <string name="txt_menu_list_persons">list persons</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_text_mail">Do you want to send email ?</string>
    <string name="message_text_phone">Do you want to call ?</string>

</resources>
